# here-map-widget-for-jupyter

./: .gitignore  .isort.cfg  .ort.yml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  map-widget-for-jupyter.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: binder.yml  main.yml  release.yml
binder/: environment.yml  postBuild
docs/: requirements.txt
docs/source/: conf.py  contribution.rst  gettingstarted.rst  index.rst  installation.rst  prerequisites.rst  referenceguide.rst
docs/source/api_reference/: map.rst
docs/source/api_reference/basemap/: basemap.rst  external_basemap.rst  japan.rst  map_tile.rst  raster.rst  vector.rst
docs/source/api_reference/config/: config.rst  default_layers_config.rst  misc_values.rst  service_names.rst  service_urls.rst
docs/source/api_reference/control/: control.rst  fullscreen.rst  layerscontrol.rst  mapsettings.rst  measurement.rst  scalebar.rst  searchcontrol.rst  splitmap.rst  widgetcontrol.rst  zoom.rst  zoomrectangle.rst
docs/source/api_reference/element/: element.rst  infobubble.rst  style.rst
docs/source/api_reference/geometry/: bbox.rst  geometry.rst  geomultipolygon.rst  geopolygon.rst  linestring.rst  multilinestring.rst  point.rst  wkt.rst
docs/source/api_reference/layer/: .geodata.rst  choropleth.rst  geo_json.rst  geodata.rst  heatmap.rst  kml.rst  layer.rst  markercluster.rst  tile_layer.rst  xyz.rst
docs/source/api_reference/object/: circle.rst  domicon.rst  dommarker.rst  group.rst  icon.rst  marker.rst  object.rst  overlay.rst  polygon.rst  polyline.rst  rectangle.rst
examples/: README.md  add_ipywidgets.ipynb  basemaps.ipynb  choropleth_layer.ipynb  circle.ipynb  countries.json  custom_icons.ipynb  custom_marker_icon.ipynb  datahub_space.ipynb  datahub_space_style.ipynb  distance_measurement_control.ipynb  dom_marker.ipynb  extrusion.ipynb  forest_fire_analysis.ipynb  forest_fire_analysis.py  geodata.ipynb  geojson_point_style.ipynb  group_objects.ipynb  image_overlay.ipynb  image_tile_layer.ipynb  india_district.json.license  infobubble.ipynb  interactive_map_layer.ipynb  japan_data.ipynb  kml.ipynb  layers_control.ipynb  map_basics_demo.ipynb  map_settings_control.ipynb  marker_cluster.ipynb  marker_trace_on_linestring.ipynb  movable_shapes_objects.ipynb  polygon.ipynb  rectangle.ipynb  search_control.ipynb  splitmap_control.ipynb  us-states.json.license  us_unemployment_oct2012.csv.license  xyz_style.yaml
here_map_widget/: __init__.py  _version.py  configs.py  map.py
jlab/: webpack.config.js
js/: .babelrc  .npmrc  .yarnrc.yml  README.md  package.json  webpack.config.js
js/lib/: Map.js  embed.js  extension.js  index.js  jupyter-map.js  labplugin.js  notebook.js
js/lib/control/: Control.js  DistanceMeasurementControl.js  FullscreenControl.js  LayersControl.js  MapSettingsControl.js  ScaleBar.js  SearchControl.js  SplitMapControl.js  WidgetControl.js  ZoomControl.js  ZoomRectangle.js
js/lib/element/: .Element.js.swp  Element.js  InfoBubble.js  Style.js
js/lib/geometrys/: Geometry.js  LineString.js  MultiLineString.js  MultiPolygon.js  Point.js  Polygon.js  Rect.js  WKT.js
js/lib/layers/: GeoJSON.js  Kml.js  Layer.js  ObjectLayer.js  TileLayer.js
js/lib/objects/: Circle.js  DomIcon.js  DomMarker.js  Group.js  Icon.js  Marker.js  Object.js  Overlay.js  Polygon.js  Polyline.js  Rectangle.js
js/lib/provider/: HeatMap.js  IML.js  ImageTile.js  MapTile.js  MarkerCluster.js  OMV.js  Provider.js  XYZ.js
js/lib/service/: DefaultLayers.js  Platform.js  Service.js
js/lib/static/: fullscreen.css  layout.css  map-view.css  range.css  searchcontrol.css
