[bdist_wheel]
universal=1


[metadata]
name = here-map-widget-for-jupyter
author = HERE Europe B.V.
description = A widget that enables you to use HERE Maps API for JavaScript in Jupyter Notebook.
long-description = file: README.md
license = MIT
platform = any
keywords =
    ipython
    jupyter
    widgets
    here-map-widget-for-jupyter
classifiers =
   Development Status :: 5 - Production/Stable
   Framework :: IPython
   Intended Audience :: Developers
   Intended Audience :: Science/Research
   Topic :: Software Development :: Libraries
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
[options]
python_requires >= 3.6
